markdown and stuff

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -22,7 +22,7 @@
           >
             <use xlink:href="#bookmark"></use>
           </svg>
-          {{ .Title }}
+          {{ .Title | markdownify}}
         </a>
       </h2>
     </li>
