--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer role="contentinfo">
+<!--<footer role="contentinfo">
   <div>
     <label for="themer">
       {{ T "dark_theme" }} <input type="checkbox" id="themer" class="vh">
@@ -8,4 +8,4 @@
   {{ with .Site.Params.footer }}
     {{ . | markdownify }}
   {{ end }}
-</footer>
+</footer>-->
