--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-<!--<footer role="contentinfo">
-  <div>
+<footer role="contentinfo">
+  <!--<div>
     <label for="themer">
       {{ T "dark_theme" }} <input type="checkbox" id="themer" class="vh">
       <span aria-hidden="true"></span>
@@ -7,5 +7,8 @@
   </div>
   {{ with .Site.Params.footer }}
     {{ . | markdownify }}
-  {{ end }}
-</footer>-->
+  {{ end }}-->
+  <div class="revision">
+    <i><a href="https://github.com/jeffreymoro/jeffreymoro-dot-com/commits/master/{{ .Page.Path }}"><i class="fa fa-refresh" aria-hidden="true"></i> revision history for this page</a></i>
+  </div>
+</footer>
