revise the github url

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,6 +9,6 @@
     {{ . | markdownify }}
   {{ end }}-->
   <div class="revision">
-    <i><a href="https://github.com/jeffreymoro/jeffreymoro-dot-com/commits/master/{{ .Page.Path }}"><i class="fa fa-refresh" aria-hidden="true"></i> revision history for this page</a></i>
+    <i><a href="https://github.com/jeffreymoro/jeffreymoro-dot-hugo/commits/main/content/{{ .File.Path }}"><i class="fa fa-refresh" aria-hidden="true"></i> revision history for this page</a></i>
   </div>
 </footer>
